@@ -976,3 +976,13 @@ select option:checked {
  color: var(--text-color)!important;
  text-shadow: none!important;
 }
+
+input, .custom-select-opener {
+ -webkit-touch-callout:none!important;
+ -webkit-user-select:none!important;
+ -khtml-user-select:none!important;
+ -moz-user-select:none!important;
+ -ms-user-select:none!important;
+ user-select:none!important;
+ -webkit-tap-highlight-color: transparent;
+}
